chore: added docker support and fixed database provision

--- a/utilitario/externo/logosm.html
+++ b/utilitario/externo/logosm.html
@@ -1,5 +1,5 @@
 
-<?xml version="1.0" encoding="utf-8"?>
+<xml version="1.0" encoding="utf-8"?>
 <svg version="1.0" width="55px" viewBox="0 0 12000 12000" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
   <g id="layer101" fill="#17232f" stroke="none">
     <!-- <path d="M0 6000 l0 -6000 6000 0 6000 0 0 6000 0 6000 -6000 0 -6000 0 0 -6000z" style="fill: none;"/> -->
